<resources>
    <string name="app_name">NUMAD22Su_JingMing</string>
    <string name="about_me_string">About Me</string>
    <string name="hello_world_string">Hello World!</string>
    <string name="name_string">Jing Ming</string>
    <string name="email_string">ming.j@northeastern.edu</string>
    <string name="clicky_string">Clicky Clicky</string>
    <string name="button_a_string">A</string>
    <string name="button_b_string">B</string>
    <string name="button_c_string">C</string>
    <string name="button_d_string">D</string>
    <string name="button_e_string">E</string>
    <string name="button_f_string">F</string>
    <string name="pressed_string">Pressed:</string>
    <string name="default_press_string">Pressed: -</string>
    <string name="link_collector_string">Link Collector</string>
    <string name="add_link_string">Add Link</string>
    <string name="create_link_success">Create Link Successful</string>
    <string name="save_link_string">Save Link</string>
    <string name="url_string">URL</string>
    <string name="link_name_string">Name</string>
    <string name="link_added_to_list">Link Added To List</string>
    <string name="link_remove">Link removed</string>
    <string name="undo_add_link">UNDO</string>
    <string name="find_primes_string">Find Primes</string>
    <string name="terminate_string">Terminate</string>
    <string name="latest_found_prime_string">Latest found prime number:\u0020</string>
    <string name="current_check_num_string">Current check number:\u0020</string>
    <string name="pacifier_switch_string">Pacifier Switch</string>
    <string name="location_string">Location</string>
    <string name="location_description_string">Current Location in (Latitude, Longitude)</string>
    <string name="latitude_string">Latitude</string>
    <string name="longitude_string">Longitude</string>
    <string name="total_travel_distance_description_string">Total Travel Distance in meters</string>
    <string name="distance_string">Distance</string>
    <string name="share_location_string">Show My Location</string>
    <string name="change_precision_string">Change Precision</string>
    <string name="reset_distance_string">Reset Distance</string>
    <string name="high_accuracy_string">Highest Accuracy</string>
    <string name="balanced_power_accuracy_string">Balanced Accuracy</string>
    <string name="low_power_string">Lowest Accuracy</string>
    <string name="no_power_string">Passive Request</string>
    <string name="location_accuracy_string">Accuracy</string>
    <string name="accuracy_selected_string">Accuracy Selected:\u0020</string>
    <string name="default_accuracy_selected_string">Please select one accuracy</string>
    <string name="web_service_string">Web Service</string>
    <string name="explore_nobel_1_string">Explore Nobel Prizes and Laureates by Category and Year</string>
    <string name="explore_nobel_Name_string">Explore Nobel Laureates by Name</string>
    <string name="category_string">Category</string>
    <string name="from_year_string">From Year</string>
    <string name="to_year_string">To Year</string>
    <string name="from_string">From</string>
    <string name="to_string">To</string>
    <string name="category_item_string">Category Detail</string>
    <string name="select_year">Select Year</string>
    <string name="nobel_name_string">Name</string>
    <string name="given_name_string">Given Name</string>
    <string name="family_name_string">Family Name</string>
    <string name="search_string">Search</string>
    <string name="clear_string">Clear</string>
    <string-array name="categories">
        <item>None</item>
        <item>Physics</item>
        <item>Chemistry</item>
        <item>Medicine</item>
        <item>Literature</item>
        <item>Peace</item>
        <item>Economic Sciences</item>
    </string-array>
    <string name="laureate_id_string">ID</string>
    <string name="laureate_id_print_string">ID:\u0020</string>
    <string name="laureate_full_name_string">Full Name</string>
    <string name="laureate_prize_string">Prize</string>
    <string name="laureate_year_string">Year</string>
    <string name="laureate_wikipedia_string">Wikipedia</string>
    <string name="no_laureates_string">No Laureates</string>
    <string name="no_record_string">No Matched Record</string>
    <string name="ok_string">OK</string>
    <string name="search_failed_string">Search Failed</string>
    <string name="decode_json_failed_string">Decode JSON object Failed</string>
</resources>