<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/laureateYearTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/content_horizontal"
        android:layout_marginTop="@dimen/inner_between"
        android:layout_marginEnd="@dimen/content_horizontal"
        android:layout_marginBottom="@dimen/content_horizontal"
        android:gravity="center_vertical"
        android:minWidth="56dp"
        android:text="@string/laureate_year_string"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/laureatePrizeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/content_horizontal"
        android:layout_marginTop="@dimen/inner_between"
        android:layout_marginEnd="@dimen/content_horizontal"
        android:layout_marginBottom="@dimen/content_horizontal"
        android:layout_toEndOf="@id/laureateYearTV"
        android:gravity="center_vertical"
        android:text="@string/laureate_prize_string"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/laureateIDTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/content_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/content_horizontal"
        android:gravity="center_vertical"
        android:text="@string/laureate_id_string"
        android:minWidth="56dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/laureateFullNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/content_horizontal"
        android:layout_marginTop="32dp"
        android:layout_toEndOf="@+id/laureateIDTV"
        android:gravity="center_vertical"
        android:text="@string/laureate_full_name_string"
        android:textColor="@color/black" />


</RelativeLayout>