<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FABActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/save_link_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_link_string"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_URL_ID" />

    <EditText
        android:id="@+id/link_name_ID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/link_name_string"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/link_URL_ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/link_URL_ID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/url_string"
        android:inputType="textUri"
        android:minHeight="48dp"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/save_link_ID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/link_name_ID" />

</androidx.constraintlayout.widget.ConstraintLayout>